# AI_solo_coder_task_A_115

backend/: Cargo.toml  test_output.txt
backend/src/: api.rs  ballistic_simulator.rs  ballistics.rs  config.rs  main.rs  metrics.rs  siege.rs  siege_evaluator.rs  storage.rs  udp_receiver.rs  udp_server.rs
clickhouse/: init.sql
frontend/: index.html
frontend/css/: style.css
frontend/js/: ballistic_panel.js  particles.js
simulator/: trebuchet_simulator.py
